--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @import "./style/content.css";
 @import "./style/forecast_days.css";
 @import "./style/forecast_hours.css";
+@import "./style/form.css";
 
 body {
   background-color: rgb(218, 216, 208);
@@ -23,8 +24,17 @@ body {
 
   #title-col,
   #main-content {
-    grid-template-columns: 14vw 80vw;
+    grid-template-columns: 13.5vw 80vw;
   }
+
+  form {
+    height: 60vh;
+  }
+
+  input:is([type = 'submit']){
+    width: 8vw;
+  }
+
 }
 
 /* limit hour columns to 8 */
@@ -41,7 +51,24 @@ body {
 
   #title-col,
   #main-content {
-    grid-template-columns: 19vw 75vw;
+    grid-template-columns: 18.5vw 75vw;
+  }
+
+  form {
+    width: 60vw;
+  }
+
+  #form-header {
+    font-size: 2.8rem;
+  }
+
+  input:not([type = 'submit']) {
+    width: 35vw;
+  }
+
+  input:is([type = 'submit']){
+    height: 3vh;
+    width: 12vw;
   }
 }
 
@@ -80,6 +107,23 @@ body {
 
   #title-col,
   #main-content {
-    grid-template-columns: 26vw 65vw;
+    grid-template-columns: 27.5vw 66vw;
+  }
+
+  form {
+    width: 60vw;
+    border: 2px solid darkgreen;
+  }
+
+  #form-header {
+    font-size: 1.8rem;
+  }
+
+  input:not([type = 'submit']) {
+    width: 35vw;
+  }
+
+  input:is([type = 'submit']){
+    width: 20vw;
   }
 }
