--- a/src/style/forecast_days.css
+++ b/src/style/forecast_days.css
@@ -1,21 +1,11 @@
-#forecast-days {
-  height: 100%;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-}
-
-.hours, #title-row {
-  display: grid;
-  grid-template-columns: repeat(24, 1fr);
-}
-
 .day-box {
-  background: rgba(125, 95, 236, 0.4);
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  border: 2px dotted green;
+  background: rgb(179, 102, 136);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-  display: grid;
-  grid-template-rows: 1fr 3fr;
 }
 
 .forecast-date {
@@ -28,4 +18,3 @@
   justify-self: center;
   align-self: center;
 }
-
