--- a/src/style/forecast_hours.css
+++ b/src/style/forecast_hours.css
@@ -1,17 +1,6 @@
-#forecast-hours {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-}
-
-.hour-titles {
-  align-self: center;
-  justify-self: center;
-}
-
-.hours {
+.forecast-row {
   display: grid;
   grid-template-columns: repeat(24, 1fr);
-  column-gap: .3vw;
 }
 
 .hour-box {
